@@ -7,7 +7,8 @@ additional peername?
         - enforce tls mode to be either accept or connect, do not simply
           segfault in Net::SSLeay.
         - AnyEvent::Handle can now call tcp_connect itself (new parameters
-          connetc, on_prepare, on_connect and on_connect_error).
+          connect, on_prepare, on_connect and on_connect_error). Updated
+          tutorial accordingly.
 	- add AnyEvent::Impl::Irssi backend.
 
 4.86 Mon Jul 20 23:52:29 CEST 2009
